# COSMUSDesign

./: README.md
COSMUS_communication/: CMakeLists.txt  package.xml
COSMUS_communication/src/: Client.py  Odometry.py
COSMUS_description/: CMakeLists.txt  package.xml
COSMUS_description/camera_cftv/: camera.sdf  model.config
COSMUS_description/camera_cftv/meshes/: cam_cftv.dae
COSMUS_description/camera_nav/: camera.sdf  model.config
COSMUS_description/camera_nav/meshes/: camera.dae
COSMUS_description/wireless/: model.config
COSMUS_description/wireless/meshes/: antenna.dae  station.dae
COSMUS_description/wireless/receiver/: model.config  receiver.sdf
COSMUS_description/wireless/transmitter/: transmitter.sdf
COSMUS_description/wireless/transmitter_station/: model.config  transmitter.sdf
COSMUS_gazebo/: CMakeLists.txt  package.xml
COSMUS_gazebo/launch/: cessna172_spawn.launch  cessna172_wifi.launch  cessna182_spawn.launch  cessna_swarm_ideal.launch  cessna_swarm_wifi.launch
COSMUS_gazebo/worlds/: blue_sky.world  mcmillan_airfield.world  mybot.world
COSMUS_gnc/: SIL_CessnaC172.slxc  SIL_OlfatiSaber.slxc  install_custom_messages.m
COSMUS_gnc/+bus_conv_fcns/+ros/+busToMsg/: RefCachedMap.mat
COSMUS_gnc/+bus_conv_fcns/+ros/+msgToBus/: RefCachedMap.mat
COSMUS_gnc/Cessna C172/: SIL_CessnaC172.slx  SIL_CessnaC172.slx.r2020b  SIL_CessnaC172.slxc  start_Cessna172.m
COSMUS_gnc/Cessna C172/slprj/_jitprj/: jitEngineAccessInfo.mat  snqdFmS0MHFIpivta0kBdbH.l  snqdFmS0MHFIpivta0kBdbH.mat
COSMUS_gnc/Utils/: Autopilot_plot.m  ExampleHelperROSTimer.m  ExampleHelperSimulationRateControl.m  Formation_plot.m  Fragmentation_plot.m  Fragmentation_subplot.m  Plot3D.m  PlotUAV.m  Resultados.m  Trajectory_plot.m  circle.m  compute_swarm_performance.m  drawTriangle.m  plot_distance.m  plot_speed.m  plot_state.m  plot_swarm_performance.m  swarm_performance.m
COSMUS_gnc/gnc_messages/cosmus_communication/msg/: NetworkComm.msg  Odom.msg
COSMUS_gnc/gnc_messages/cosmus_communication/src/: Network.py  Odometry.py
COSMUS_gnc/gnc_messages/cosmus_messages/msg/: Control_Surfaces.msg  Odom.msg
COSMUS_gnc/gnc_messages/matlab_msg_gen_ros1/glnxa64/src/cosmus_messages/: CMakeLists.txt  Md5checksum.mat  packageInfo.mat
COSMUS_gnc/gnc_messages/matlab_msg_gen_ros1/glnxa64/src/cosmus_messages/m/+ros/+internal/+ros/+custommessages/+cosmus_messages/: communication.m  control_Surfaces.m  networkComm.m  odom.m  vector3D.m  wind.m
COSMUS_gnc/gnc_messages/matlab_msg_gen_ros1/glnxa64/src/cosmus_messages/m/+ros/+msggen/+cosmus_messages/: Control_Surfaces.m  Datagram.m
COSMUS_gnc/gnc_messages/matlab_msg_gen_ros1/glnxa64/src/cosmus_messages/msg/: Communication.msg  Wind.msg
COSMUS_gnc/gnc_messages/matlab_msg_gen_ros1/glnxa64/src/cosmus_messages/src/: cosmus_messages_Airspeed_message.cpp  cosmus_messages_Communication_message.cpp  cosmus_messages_Control_Surfaces_message.cpp  cosmus_messages_Datagram_message.cpp  cosmus_messages_NetworkComm_message.cpp  cosmus_messages_Odom_message.cpp  cosmus_messages_Vector3D_message.cpp  cosmus_messages_WifiSignal_message.cpp  cosmus_messages_WifiSignals_message.cpp  cosmus_messages_Wind_message.cpp
COSMUS_gnc/slprj/_jitprj/: jitEngineAccessInfo.mat  s0BzurrlVRrurBmEKq0pOlH.l  s0BzurrlVRrurBmEKq0pOlH.mat  s3VbIBtRLfGczbqZpLNxc2G.l  s3VbIBtRLfGczbqZpLNxc2G.mat  s6LsNoA8bVlkZglEtVvvgqB.l  s6LsNoA8bVlkZglEtVvvgqB.mat  s6R1I7Ovo3Iq1UstART7No.l  s6R1I7Ovo3Iq1UstART7No.mat  s6lIgxauVnPteXPPtKaVSDD.l  s6lIgxauVnPteXPPtKaVSDD.mat  s6w4lSJFdnCNjjZJGrUbOTF.l  s6w4lSJFdnCNjjZJGrUbOTF.mat  s7mse9eagvV6VFyNDeMUvSE.l  s7mse9eagvV6VFyNDeMUvSE.mat  s9zQzdoXRYfA5IiK9dkrIx.l  s9zQzdoXRYfA5IiK9dkrIx.mat  sBME1HycuntGRQKRTgkrbMG.l  sBME1HycuntGRQKRTgkrbMG.mat  sDWKQXth7g9kaHiHG1622LB.l  sDWKQXth7g9kaHiHG1622LB.mat  sDcH37Zs6a5Y1lraXYD3taG.l  sDcH37Zs6a5Y1lraXYD3taG.mat  sDqlbeOaNypg6LL0MSVB5QE.l  sDqlbeOaNypg6LL0MSVB5QE.mat  sG3SFRXM2LtaNuVnpBBpYnE.l  sG3SFRXM2LtaNuVnpBBpYnE.mat  sGjt8opBZjFnh8WZBtFwQ5C.l  sGjt8opBZjFnh8WZBtFwQ5C.mat  sILTKeomXsKTj5zcC6PTUPC.l  sILTKeomXsKTj5zcC6PTUPC.mat  sIxBJgtWDBrxwgmFoe8HQl.l  sIxBJgtWDBrxwgmFoe8HQl.mat  sLYH7XWGI9kIEIsOdWoURXC.l  sLYH7XWGI9kIEIsOdWoURXC.mat  sLxDEXAKEiOXo6US0IVIKhG.l  sLxDEXAKEiOXo6US0IVIKhG.mat  sM6nOKTWghPGwJysMb8tRMB.l  sM6nOKTWghPGwJysMb8tRMB.mat  sM9hQLFs1tBBXOJJ1VXMJPF.l  (+96 more)
COSMUS_gnc/slprj/_sfprj/EMLReport/: IFt6nTPxw0ZfTcJErKRojC.mat  WhFHk3IQl0Rl8Nlb17a7yD.mat  emlReportAccessInfo.mat  s0BzurrlVRrurBmEKq0pOlH.mat  s1XdGMpE6VbcV3joRuuMbWH.mat  s3VbIBtRLfGczbqZpLNxc2G.mat  s6BBEXdceeQO0DTsHZtrWfE.mat  s6LsNoA8bVlkZglEtVvvgqB.mat  s6R1I7Ovo3Iq1UstART7No.mat  s6lIgxauVnPteXPPtKaVSDD.mat  (+73 more)
COSMUS_gnc/swarm_algorithms/: SIL_OlfatiSaber.slx  SIL_OlfatiSaber.slx.r2020b  start_swarm.m
COSMUS_messages/: CMakeLists.txt  package.xml
COSMUS_messages/msg/: Airspeed.msg  Vector3D.msg
COSMUS_models/: CMakeLists.txt  package.xml
COSMUS_models/cessna_c172/: model.sdf
COSMUS_models/cessna_c172_wifi/: model.sdf
COSMUS_plugins/: CMakeLists.txt  package.xml
COSMUS_plugins/include/cosmus_plugins/: RF_model.h  airspeed_plugin.h  camera_nav.h  utils.h  wifi_receiver.h
COSMUS_plugins/src/airspeed/: airspeed_plugin.cc
COSMUS_plugins/src/camera/: camera_nav.cc
COSMUS_plugins/src/command/: aircraft_control.cc
COSMUS_plugins/src/wifi_receiver/: wifi_receiver.cc
COSMUS_utils/: CMakeLists.txt  package.xml
COSMUS_utils/src/: odometry.cc  sdf_parser.cc
aircraft_communication/: CMakeLists.txt  package.xml
aircraft_communication/src/: Client.py  Network (copy1).py  Network.py  Odometry.py  Servant (copy1).py
aircraft_control/: CMakeLists.txt  package.xml
aircraft_control/include/cessna_control/: cessna_control.h
aircraft_control/msg/: sensores.msg
aircraft_control/src/: aircraft_control.cpp
aircraft_gazebo/: CMakeLists.txt  package.xml
aircraft_gazebo/launch/: cessna_spawn.launch  cessna_swarm.launch
aircraft_gazebo/worlds/: cyberzoo.world  ground_place.world  mybot.world
aircraft_models/: CMakeLists.txt  package.xml
aircraft_models/cessna_c172/: model.config  model.sdf  model.urdf
(+126 files in other folders)
