<?xml version="1.0"?>
<package>
  <name>cosmus_gazebo</name>
  <version>0.0.0</version>
  <description>The cosmus_gazebo package</description>
  <maintainer email="fcsouza14@unifesp.br">Fabrício C. Souza</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
  
</package>
