<?xml version="1.0"?>
<package>
  <name>cosmus_messages</name>
  <version>0.0.0</version>
  <description>
    The cosmus_messages package
  </description>
  <license>
    Apache License, Version 2.0
  </license>
  <author email="fcsouza14@unifesp.br">Fabrício C. Souza</author>
  <maintainer email="fcsouza14@unifesp.br">Fabrício C. Souza</maintainer>
  
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <export></export>
</package>
